# intaris

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yaml  pyproject.toml
.github/workflows/: hermes-publish.yml  python-publish.yml
docs/: README.md  architecture.md  benchmarking.md  configuration.md  deployment.md  development.md  evaluation-pipeline.md  management-ui.md  mcp-proxy.md  quickstart.md  rest-api.md
docs/clients/: claude-code.md  hermes.md  openclaw.md  opencode.md
intaris/: __init__.py  alignment.py  analyzer.py  audit.py  auth.py  background.py  classifier.py  config.py  crypto.py  db.py  decision.py  evaluator.py  intention.py  judge.py  llm.py  precedent.py  prompts.py  prompts_analysis.py  ratelimit.py  redactor.py  sanitize.py  server.py  session.py  webhook.py
intaris/api/: __init__.py  actions.py  analysis.py  audit.py  auth.py  deps.py  evaluate.py  events.py  info.py  intention.py  mcp.py  notifications.py  schemas.py  stream.py
intaris/events/: __init__.py  backend.py  idempotency.py  resolve.py  store.py
intaris/mcp/: __init__.py  client.py  config.py  proxy.py  store.py
intaris/notifications/: __init__.py  dispatcher.py  providers.py  store.py  tokens.py
intaris/ui/: __init__.py  tailwind.config.js
intaris/ui/src/: input.css
intaris/ui/static/: index.html
intaris/ui/static/css/: app.css
intaris/ui/static/js/: analysis.js  api.js  app.js  approvals.js  audit.js  console-player.js  dashboard.js  player.js  servers.js  sessions.js  settings.js
integrations/claude-code/: README.md  hooks.json
integrations/claude-code/scripts/: evaluate.sh  intaris-evaluate.sh  intaris-lib.sh  intaris-prompt.sh  intaris-record.sh  intaris-session-end.sh  intaris-session.sh  intaris-stop-failure.sh  intaris-stop.sh  intaris-subagent-stop.sh  intaris-subagent.sh  record.sh  session.sh  stop.sh
integrations/hermes/: README.md  pyproject.toml
integrations/hermes/hermes_intaris/: __init__.py  client.py  plugin.yaml
integrations/hermes/tests/: test_plugin.py
integrations/openclaw/: README.md  client.ts  index.test.ts  index.ts  package.json  types.ts
integrations/opencode/: README.md  intaris.ts  opencode.json
tests/: test_alignment.py  test_analyzer.py  test_api.py  test_auth_exchange.py  test_background.py  test_classifier.py  test_config.py  test_db.py  test_decision.py  test_e2e.py  test_events.py  test_intention.py  test_judge.py  test_jwt_auth.py  test_llm.py  test_mcp.py  test_path_policy.py  test_prompts.py  test_ratelimit.py  test_redactor.py  test_resolve.py  test_sanitize.py  test_stream.py  test_webhook.py
tools/benchmark/: README.md  __init__.py  __main__.py  agent.py  cli.py  client.py  evaluator.py  models.py  recorder.py  report.py  runner.py  scorer.py  store.py  tools.py
tools/benchmark/scenarios/: __init__.py  adversarial.py  coding.py  cross_session.py  gold.py  hierarchical.py  infra.py  research.py  social.py  workplace.py  worlds.py
